--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_statusbarcolor_ns: ^0.4.0
   font_awesome_flutter: ^10.1.0
   hexcolor: ^2.0.6
+  cached_network_image: ^3.2.0
+  http: ^0.13.4
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
