--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cached_network_image: ^3.2.0
   http: ^0.13.4
   shared_preferences: ^2.0.15
+  pin_code_fields: ^7.4.0
 
 dev_dependencies:
   flutter_test:
