--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.persedikab_app">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="persedikab_app"
+        android:label="Persedikab App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
