--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   cached_network_image: ^3.2.1
   flutter_datetime_picker: ^1.5.1
   dropdown_button2: ^1.5.3
+  onesignal_flutter: ^3.3.2
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -57,11 +59,17 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: "^0.9.2"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
+
 flutter:
 
   # The following line ensures that the Material Icons font is
